add reservation payment handlers + ticket generating